changes in cascading style sheets

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chef-phoenix",
+  "name": "chef-app",
   "homepage": "https://aishwaryaghatole.github.io/chef-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
